# uncork

./: README.md  build-pso.sh  pyproject.toml  test-overlay-cleanup.sh
src/uncork/: __init__.py  analysis.py  builder.py  capture.py  cli.py  icons.py  launcher.py  registry.py  spec.py
src/uncork/builders/: __init__.py  deb.py  pacman.py  rpm.py
